CHANGES for LIRE
================

2013-07-11
==========
  - Added name and field name methods to LireFeature interface to simplify creation of builders and searchers.
  - Updated GenericDocumentBuilder and GenericFastImageSearcher to reflect the changes
  - Updated documentation in several classes
  - deprecated GenericImageSearcher

2013-07-10
==========
  - Added getDoubleHistogram to FuzzyColorHistogram (by patch contributed by Franz Graf, franz.graf@gmail.com)

2013-07-07
==========
  - Added thresholding in ImageUtils

2013-07-07
==========
  - Added new, easier constructor to GenericDocumentBuilder.
  - Fixed bug in quantization of PHOG histograms.
  - Updated to commons math 3.2
  - Added simplified constructors to BitSamplingImageSearcher
  - Added lookup data structures to GenericDocumentBuilder

2013-07-06
==========
  - Added BinaryPatternsPyramid

2013-07-01
==========
  - Re-organized joint histograms
  - Re-organized getGrayscaleImage(...)
  - Re-coded trimWhiteSpace(...) in ImageUtils

2013-06-25
==========
  - Mavenization of the project (Sandeep Gupta twitter.com/sangupta)
  - Removed all warnings of resource leaks (Sandeep Gupta twitter.com/sangupta)
  - Implemented type-safety by using generics than raw types. (Sandeep Gupta twitter.com/sangupta) - only partial patch

2013-06-23
==========
  - Added net.semanticmetadata.lire.indexing.LireCustomCodec to allow for faster linear search
    It still has to be activated by the user in the IndexWriterConfig.

2013-06-23
==========
  - Added a new distance routine to OpponentHistogram, that could prove faster when reading from an index.
  - Profiled search and found that the compressed stored fields made search awfully slow. Decompression
    takes up to 60% search time.
  - If an ImageSearcher starts with caching the byte[] values in memory, search time goes down rapidly.
    Results from a test:
      # of images in an index of OpponentHistogram = 50000
      init time of cached search: ms = 1414